fixing font size as requirements of Product owner and truncate Horizontal disc

--- a/assets/scss/components/audio-disc.scss
+++ b/assets/scss/components/audio-disc.scss
@@ -71,7 +71,7 @@
             }
             .listener-wrapper {
                 .total-listener {
-                    font-family: Open Sans;
+                    font-family: inherit;
                     font-style: normal;
                     font-weight: 600;
                     font-size: 10px;
@@ -81,13 +81,14 @@
                 }
             }
             .playlist-name {
-                font-family: Open Sans;
+                font-family: inherit;
                 font-style: normal;
                 font-weight: 600;
                 font-size: 12px;
                 line-height: 16px;
                 margin-top: 16px;
                 color: #E3E3E3;
+                text-align: center;
             }
         }
     }
